media/style.css
/* http://meyerweb.com/eric/tools/css/reset/ */
/* v1.0 | 20080212 */

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, font, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td {
	margin: 0;
	padding: 0;
	border: 0;
	outline: 0;
	font-size: 100%;
	vertical-align: baseline;
	background: transparent;
}
ul {
    list-style-type: none;
}
ol {
    margin-left: 20px;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}

/* remember to define focus styles! */
:focus {
	outline: 0;
}

/* remember to highlight inserts somehow! */
ins {
	text-decoration: none;
}
del {
	text-decoration: line-through;
}

/* tables still need 'cellspacing="0"' in the markup */
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/** Normal stying. **/

@font-face {
    font-family: "LiberationMonoRegular", sans-serif;
    src: url('LiberationMono-Regular-webfont.eot');
    src: url('LiberationMono-Regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('LiberationMono-Regular-webfont.woff') format('woff'),
         url('LiberationMono-Regular-webfont.ttf') format('truetype'),
         url('LiberationMono-Regular-webfont.svg#LiberationMonoRegular') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'UbuntuMonoRegular';
    src: url('UbuntuMono-R-webfont.eot');
    src: url('UbuntuMono-R-webfont.eot?#iefix') format('embedded-opentype'),
         url('UbuntuMono-R-webfont.woff') format('woff'),
         url('UbuntuMono-R-webfont.ttf') format('truetype'),
         url('UbuntuMono-R-webfont.svg#UbuntuMonoRegular') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'SourceSansProRegular';
    src: url('SourceSansPro-Regular-webfont.eot');
    src: url('SourceSansPro-Regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('SourceSansPro-Regular-webfont.woff') format('woff'),
         url('SourceSansPro-Regular-webfont.ttf') format('truetype'),
         url('SourceSansPro-Regular-webfont.svg#SourceSansProRegular') format('svg');
    font-weight: normal;
    font-style: normal;
}

body {
    font-weight: normal;
    color: #727373;
    color: #483318;
    width: 40em;
    margin: 0 auto 20px;
    padding: 20px 0 0;
    border-top: 8px solid;
    line-height: 24px;
    font-family: SourceSansProRegular, Helvetica, sans-serif;
}

body.grid {
    background-image: url(baseline.gif);
}

/** Headings **/

h1, h2, h3, h4, h5, h6 {
    font-family: "Helvetica Neue", Helvetica, sans-serif;
    margin: 30px 0;
}

section, header {
    display: block;
}

address {
    display: inline;
    font-style: normal;
}

/** Articles & Sections **/

article > header {
    margin-bottom: 24px;
}

section h1,
article header h1 {
    font-size: 28px;
    color: #332411;
    margin: 5px 0;
}

section h1 {
    margin-bottom: 18px;
}

section {
    margin-bottom: 18px;
}

article header h1 + .byline {
    line-height: 24px;
    font-size: 14px;
    color: #555;
}

article h2 {
    line-height: 22px;
    font-size: 22px;
    margin-bottom: 8px;
    margin-top: 12px;
}

/** Links **/

a {
    color: #146894;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

a:visited {
    color: #441d7b;
}

/** Lists **/

p + ul {
    margin: 12px 0;
}

/** Misc **/

blockquote {
    color: rgba(72, 51, 24, .6);
    padding: .6em;
}

p + p,
blockquote + p,
.gist {
    margin-top: 18px;
}

code {
    font-family: UbuntuMonoRegular, monospace;
    background-color: rgb(248, 248, 255);
    border: 1px solid rgb(221, 221, 221);
    padding: 2px;
}

pre {
    margin: 8px 0 8px 2em;
    font-size: 14px;
    line-height: 16px;
    margin-left: 2em;
}

/** Homepage **/

#posts ul {
    text-indent: 0;
}

#posts ul li:before {
    content: none;
}

#posts time {
    font-family: UbuntuMonoRegular, monospace;
}

#projects dt {
    clear: both;
    padding-right: 4px;
}

#projects dt:after {
    content: ":";
}

#projects dt,
#projects dd {
    float: left;
}

.gist-highlight {
    border-left: 3ex solid #eee;
    position: relative;
}

.gist-highlight pre {
    counter-reset: linenumbers;
}

.gist-highlight pre div:before {
    color: #aaa;
    content: counter(linenumbers);
    counter-increment: linenumbers;
    left: -3ex;
    position: absolute;
    text-align: right;
    width: 2.5ex;
}

.warning {
    background: rgba(230, 230, 0, .3);
    padding: .2em;
    border: 1px dashed rgb(72, 51, 24);
}

.footer {
    font-size: 80%;
    color: rgb(102, 102, 102);
    border-top: 4px solid;
    margin-top: 2em;
    overflow: hidden;
    width: 100%;
    padding-top: 0.4em;
}

.contact {
    float:left;
    margin-right: 3em;
}

.rss {
    margin-top: 0.4em;
    margin-right: 0.4em;
    float: right;
}

.idl {
    margin-top: 0.4em;
    float: right;
}

.idl img {
    height: 6em;
    margin-top: -0.5em;
}

.gist .gist-file .gist-data pre {
    line-height: 20px;
}
.gist .gist-file .gist-data .line_numbers span {
    line-height: 20px;
}

